Fixed bg image on home zooming on mobile scroll

--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -129,7 +129,7 @@
 
 	img.hero-background {
 		width: 100vw;
-		height: 100dvh;
+		height: 100vh;
 		top: 0;
 		left: 0;
 		position: fixed;
